--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -30,16 +30,16 @@
     width: 25px;
     height: 25px;
     cursor: pointer;
-    background: url('../../images/closeM.png') no-repeat center;
+    background: url("../../images/closeM.png") no-repeat center;
     background-size: cover;
   }
   &-content {
     background-color: #fff;
     display: flex;
-    height: 100%;
     flex-direction: column;
     justify-content: space-between;
     width: 60%;
+    height: 100%;
     padding: 30px 25px 25px 40px;
   }
   &-img {
@@ -48,14 +48,14 @@
     height: 100%;
   }
   &-img::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 5%;
     left: 5%;
     z-index: 16;
-    width: 50%;
+    min-width: 140px;
     height: 40px;
-    background: url('../../images/logo-modal.png') no-repeat center;
+    background: url("../../images/logo-modal.png") no-repeat center;
     background-size: cover;
   }
   &-img img {
