--- a/src/scss/main/responsive.scss
+++ b/src/scss/main/responsive.scss
@@ -235,17 +235,14 @@
       order: 1;
       width: 100%;
       max-height: 300px;
+      height: 40%;
     }
     &-content {
-      overflow: scroll;
+      overflow: auto;
       order: 2;
       width: 100%;
-      height: auto;
+      height: 60%;
       padding: 25px 15px 15px;
-    }
-    &-img::before {
-      width: 35%;
-      height: 50px;
     }
   }
 }
@@ -321,8 +318,9 @@
       max-height: 200px;
     }
     &-img::before {
-      width: 25%;
-      height: 20px;
+      min-width: 0;
+      width: 100px;
+      height: 30px;
     }
   }
 }
