changed footer and header

--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -26,11 +26,17 @@
             </p>
           </div>
           <div class="footer__column">
-            <a class="footer__details" href="#">sales@apoint.uz</a>
-            <a class="footer__details" href="#">Напишите нам в телеграм</a>
+            <a class="footer__details" href="https://mail.google.com/"
+              >sales@apoint.uz</a
+            >
+            <a class="footer__details" href="https://telegram.org/?setln=ru"
+              >Напишите нам в телеграм</a
+            >
           </div>
           <div class="footer__column">
-            <a class="footer__phone" href="#"><span>+998</span>(99) 800 2002</a>
+            <a class="footer__phone" href="tel:998002002"
+              ><span>+998</span>(99) 800 2002</a
+            >
           </div>
         </div>
       </div>
