--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -2,10 +2,10 @@
   <div class="container">
     <section class="header-left">
       <div class="header__menu">
-        <a href="#" class="header__logo">
+        <a href="index.html" class="header__logo">
           <img src="images/logo.png" alt="Logo" />
         </a>
-        <a href="#" class="header__link">Главная</a>
+        <a href="inner.html" class="header__link">Главная</a>
       </div>
       <div class="header__video">
         <div class="header__video-wrapper">
@@ -25,7 +25,9 @@
       </div>
       <div class="header__contacts">
         <img src="images/banner-right.png" alt="header-img" />
-        <a href="#" class="header__phone"><span>+998</span> (99) 101 11 16</a>
+        <a href="tel:991011116" class="header__phone"
+          ><span>+998</span> (99) 101 11 16</a
+        >
       </div>
       <div class="header__inf">
         <p class="header__subtitle">Комплексная программное обеспечения</p>
